Realizado do 6 ao 16. Trabalhando com Dimensões Width, Height, Max, Min, Margin, Padding, Formatação de Texto, Box Sizing, Box Shadow, Overflow, Opacity, Border Radius, Fonts, @Font-Face, Google Fonts (Fontes Externas), Cores, Gradients. Atualizado nome de arquivos.

--- a/CSS - Aula 6/style.css
+++ b/CSS - Aula 6/style.css
@@ -1,4 +1,5 @@
-#conteudo {background-color: green; color:#fff; padding: 20px;}
+#conteudo {width:80%; height: 100px;background-color: green; color:#fff; padding: 20px;}
+/*max-witdh: 500px; min-witdh:  500px; min-height: 20px;*/
 
 /* Aula 5
 .texto-principal {color:red; text-align: center;}
