Realizado do 17 ao 20. Trabalhando com Color, Gradients, Float, Position, Border e Outline.

--- a/CSS - Aula 19/style.css
+++ b/CSS - Aula 19/style.css
@@ -1,4 +1,47 @@
-#bloco {background-color: green; width:300px; height:150px; border-radius:20px 50px 100px 0px;}
+#conteudo {width:600px; height:1200px; background-color: red; position:relative;}
+#texto {width:500px; background-color: green; position:fixed; right:0; bottom:0;}
+
+/* Aula 18
+#base {background-color: green; width:600px; height:600px;}
+#esquerda {background-color: red; width:300px; height:300px; float:left;}
+#direita {background-color: blue; width:300px; height:300px; float: right;}
+
+/* Aula 17
+.container1 {display:flex; justify-content: space-evenly;}
+#cores1 {width:200px; height:200px; background:linear-gradient(red, blue);}
+#cores2 {width:200px; height:200px; background:linear-gradient(to top left, red, blue, green);}
+#cores3 {width:200px; height:200px; background:linear-gradient(80deg, red, blue, green);}
+#cores4 {width:200px; height:200px; background:linear-gradient(45deg,rgba(255,0,0,0), blue, green);}
+
+.container2 {display:flex; justify-content: center;}
+#cores5 {width:200px; height:200px; background:radial-gradient(red, purple);}
+
+/* Aula 16
+#cores {width:200px; height:200px; background-color: rgba(64, 183, 140, 0.5);}
+/* As cores podem ser chamadas também pela numeração hexadecimal como #fff(branco), pelo próprio nome da cor, pelo rgb como no exemplo acima e pelo hsl como hsl(20, 100%, 59%) (laranja).
+O "a" é adicionado na sigla quando aplica opacidade na cor.
+*/
+
+/* Aula 15
+* {font-size:100%;}
+@font-face {font-family: open_sans; src: url(./font/opensans-regular-webfont.woff);}
+p {font-family: 'Arimo', sans-serif; font-size:1.2em;}
+*/
+
+/* Aula 14
+* {font-size:100%;}
+@font-face {font-family: open_sans; src: url(./font/opensans-regular-webfont.woff);}
+p {font-family: open_sans; font-size: 2.5em;}
+*/
+
+/* Aula 13
+* {font-size:100%;}
+p {font-family: Times, "Times New Roman", serif; font-variant: small-caps; font-weight: bold; font-style: italic; font-size:1em;}
+/* 1em é igual 1 16px*/
+
+/* Aula 12
+#blocl {background-color: green; width:300px; height:150px; border-radius:20px 50px 100px 0px;}
+*/
 
 /* Aula 11
 #conteudo {background-color: red; width:300px; height:70px; overflow:auto;}
