--- a/CSS - Aula 21/style.css
+++ b/CSS - Aula 21/style.css
@@ -1,3 +1,14 @@
+#exemplo {width:200px; height:200px; background-color: red; transition: width 2s linear 1s, height 2s linear;}
+/* #exemplo {width:200px; height:200px; background-color: red; transition: all 2s linear;}
+#exemplo {width:200px; height:200px; background-color: red; transition-property: width; transition-duration: 2s; transition-timing-function: linear; transition-delay:2s;} */
+#exemplo:hover {width:350px; height:350px; background-color: green;}
+
+/* Aula 21
+#exemplo1 {border-style:solid; border-width: 5px; border-color: red;}
+#exemplo2 {border-top:solid 5px red;}
+#exemplo3 {border-bottom:solid 5px red; outline:dotted 5px green;}
+
+/* Aula 19
 #conteudo {width:600px; height:1200px; background-color: red; position:relative;}
 #texto {width:500px; background-color: green; position:fixed; right:0; bottom:0;}
 
