Finalizado aula 30 e trilha CSS. Trabalhando com Filtros de Imagens como: Blur, Brightness, Contrast, Grayscale, Invert, Opacity, Saturate, Sepia, Hue-Rotate, Drop-Shadow.

--- a/CSS - Aula 30/style.css
+++ b/CSS - Aula 30/style.css
@@ -1,6 +1,15 @@
-#img1 {margin: 40px 0 0 60px; filter: blur(4px);}
-#img2 {margin: 40px 0 0 60px; filter: brightness(20%);}
-#img3 {margin: 40px 0 0 60px; filter: contrast(100%);}
+.container1, .container2, .container3 {display: flex; text-align: center;}
+.img1 {margin: 40px 0 0 60px; filter: blur(4px);}
+.img2 {margin: 40px 0 0 60px; filter: brightness(0%);}
+.img3 {margin: 40px 0 0 60px; filter: contrast(0%);}
+.img4 {margin: 40px 0 0 60px; filter: grayscale(50%);}
+.img5 {margin: 40px 0 0 60px; filter: invert(100%);}
+.img6 {margin: 40px 0 0 60px; filter: opacity(25%);}
+.img7 {margin: 40px 0 0 60px; filter: saturate(200%);}
+.img8 {margin: 40px 0 0 60px; filter: sepia(100%);}
+.img9 {margin: 40px 0 0 60px; filter: hue-rotate(100deg);}
+.img10 {margin: 40px 0 0 60px; filter: drop-shadow(10px 20px 5px #000) contrast(150%);}
+.container4 {text-align: center;}
 
 /* * {margin: 0; padding: 0;}
 nav {width: 100vw; height: 80px; background-color: blue;}
